# chatpdf

./: .gitignore  Makefile  README.md  app.py  chainlit.md  document_manager.py  examples_manager.py  logging_config.py  prompt_manager.py  pyproject.toml
.chainlit/: config.toml
examples/: query_understanding.json
mdfiles/: BIMM_ITB_SERVICE_&_REPAIR_MANUAL.md  CHALLENGER_39000_IOM_MANUAL.md  CHALLENGER_CL12_IOM_MANUAL.md  CHAMPION_VR5-6_O&M_MANUAL.md  COATS_5060_O&M_MANUAL.md  COATS_70X_O&M_MANUAL.md  DESMON_BLAST_CHILLER_SERVICE_MANUAL.md  FMH__Manual_conveyor_system.md  FREAL_FRLB4_SERVICE_MANUAL.md  FRI-JADO_TDR7_SERVICE_MANUAL.md  FriJado_Hot_Case_9129355_Service_Manual__DC_3_level_16072024_EN.md  FriJado_Hot_Case_Service_Manual_MDD-3-48.md  GARLAND_MCO-ED-10_OPERATION_AND_MAINTENANCE_MANUAL.md  GENIE_GS-1930_SERVICE_MANUAL.md  GENIE_GS-2632_SERVICE_MANUAL.md  NORDOCK_AD_OPERATION_MAINTENANCE_AND_PARTS_MANUAL.md  RAYMOND_102XM_MAINTENANCE_MANUAL.md  ROTARY_SPO9_O&M_MANUAL.md  ROTARY_VLXS7_O&M_MANUAL.md  Vantage_IOS_130100NA_RevC.md
prompts/: product_catalog.txt  product_response.txt  query_understanding.txt  system.txt
public/: custom.js
